--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,20 +136,11 @@ body {font-family: OSReg,sans-serif;margin: 0;padding: 0; background: rgba(0,0,0
 	background-color: rgba(0,107,207,1.0) !important;
 	color: #fff;
 }
-
-.loader {
-    border: 16px solid #f3f3f3; /* Light grey */
-    border-top: 16px solid #3498db; /* Blue */
-    border-radius: 50%;
-    width: 500px;
-    height: 500px;
-    position: absolute;
-    top: 200px;
-    left: 300px;
-    animation: spin 2s linear infinite;
-}
-
-@keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+.employee-profile{
+	width: 200px;
+	min-width: 200px;
+	min-height: 200px;
+	height: 200px;
+	background-color: rgba(0,132,255,1.0) !important;
+	margin: 0 auto;
 }
